--- a/TemePractica/tema2/src/app/nav-bar/nav-bar.component.html
+++ b/TemePractica/tema2/src/app/nav-bar/nav-bar.component.html
@@ -5,7 +5,7 @@
       <nav class="nav">
         <ul>
           <li><a routerLink="list">List</a></li>
-          <li><a href="login">Cards</a></li>
+          <li><a routerLink="login">Cards</a></li>
         </ul>
       </nav>
     </div>
